# verbose-adventure

./: .gitignore  Cargo.toml  LICENSE.external  README.md  build.rs
assets/shaders/: coordinate.frag  coordinate.vert  glyph.frag  glyph.vert  textured.frag  uniform_colored.frag
console_backend/: Cargo.toml
console_backend/src/: color.rs  console.rs  glyph.rs  lib.rs  renderable.rs  resources.rs
console_backend/src/render_gl/: buffer.rs  camera.rs  errors.rs  mod.rs  shader.rs  texture.rs  viewport.rs
font_renderer/: Cargo.toml
font_renderer/src/: lib.rs
lib/gl/: Cargo.toml
lib/gl/src/: bindings.rs  lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: color.rs  console.rs  console_vertex.rs  cube.rs  debug.rs  fov.rs  game.rs  game_handler.rs  glyph.rs  main.rs  map.rs  object.rs  rectangle.rs  resources.rs  scrolling_message_console.rs  theme.rs  triangle.rs
src/render_gl/: buffer.rs  camera.rs  color_buffer.rs  data.rs  math.rs  mod.rs  shader.rs  texture.rs  viewport.rs
src/widgets/: menu.rs  mod.rs  scrolling_message_console.rs
