[package]
name = "console_backend"
version = "0.1.0"
authors = ["Kriston Costa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.22.0-alpha1"
gl = { path = "../lib/gl" }
render_gl_derive = { path = "../render_gl_derive" }
font_renderer = { path = "../font_renderer" }
failure = "0.1.5"
nalgebra = "0.18.0"
nalgebra-glm = "0.4.0"
image = "0.22.0"
tobj = "0.1.8"
num = "0.2.0"
rand = "0.7.0"